<?xml version="1.0"?>
<package format="2">

  <name>driver_mpu9250_msgs</name>
  <version>1.0.0</version>
  <description>Provides messages and services for interacting with the driver_mpu9250 node.</description>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

</package>